# X.skill

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  HEARTBEAT.md  Home.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  index.md  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
automation/: README.md
config/: settings.example.json
examples/: README.md  x-home-after-intelligence.example.md  x-home-after-memory.example.md  x-home-before.example.json
raw/inbox/: reddit-ml-visible-posts.example.json  x-home-visible-posts.example.json
scripts/: README.md  build_demo_dashboard.py  config.py  init_memory.py  memory_files.py  memory_state_sync.py  reddit_feed_refresh.py  run_x_pipeline.sh  x_home_feed_refresh.py
templates/: memory-layer-template.md
web/: README.md
wiki/: overview.md
wiki/analyses/: memory-schema.md  memory-state-dashboard.md  open-source-boundaries.md  publish-checklist.md  reddit-learning-pattern.md  reddit-ml-intelligence.md  reddit-ml-learning-memory.md  x-private-capture-setup.md
