[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signalos"
version = "0.1.0"
description = "Public scaffold for a self-learning second-brain and memory operating system."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SignalOS" }
]
dependencies = []

[tool.setuptools]
py-modules = []
