[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feeddistill"
version = "0.1.0"
description = "Public scaffold for personal X-based self-learning and memory distillation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "FeedDistill" }
]
dependencies = []

[tool.setuptools]
py-modules = []
